--- a/css/WorkCss.css
+++ b/css/WorkCss.css
@@ -97,7 +97,7 @@ h3{
 	width: 100%;
 	height: 400px;
 	background-color: black;
-	background-image:url(../images/GS/GS_bg.png);
+	background-image:url(../images/GS/GS_bg.jpg);
 	background-size:cover;
 	background-attachment:fixed;
 	background-position: center center; 
