--- a/css/WorkCss.css
+++ b/css/WorkCss.css
@@ -117,7 +117,7 @@ h3{
 	width: 100%;
 	height: 400px;
 	background-color: black;
-	background-image:url(../images/opa/OPAheaderBG.png);
+	background-image:url(../images/opa/OPA_bg.jpg);
 	background-size:cover;
 	background-attachment:fixed;
 	background-position: center top; 
