--- a/css/WorkCss.css
+++ b/css/WorkCss.css
@@ -1,6 +1,8 @@
 
 /* styles -----------------------------------*/
-body,html{ width: 100%; height: 100%;  font-family: sans-serif, 微軟正黑體,Arial; font-size: 18px;}
+@import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
+
+body,html{ width: 100%; height: 100%;  font-family: Arial, "Noto Sans TC", sans-serif; font-size: 18px; font-weight: 300;}
         *{ box-sizing: border-box; margin: 0; border: 0; padding: 0; }
 
 nav{
@@ -150,6 +152,14 @@ main > section{
 .container_BI img{
 	width: 100%;
 }
+.container_UI_exp{
+	display: flex;
+	max-width: 1110px;
+	margin: 0 auto;
+}
+.container_UI_exp img{
+	width: 100%;
+}
 .container_UI{
 	display: grid; 
 	grid-template-columns: repeat(auto-fill, minmax(min-content, 540px));
@@ -266,6 +276,7 @@ main > section{
 	color:crimson;
 	display: list-item;
 	list-style: square outside none;
+	line-height: 1.5em;
 }
 .ui_h{
 		display: grid;
