--- a/css/WorkCss.css
+++ b/css/WorkCss.css
@@ -245,6 +245,15 @@ main > section{
 	width: 100%;
 	margin: 0 auto;
 }
+.container_ani_v1{
+	max-width:800px;
+	margin: 0 auto;
+}
+.container_ani_v2{
+	max-width:1000px;
+	margin: 0 auto;
+	padding-bottom: 20px;
+}
 .row > img{
 	width: 100%;
 	margin: 0 auto;
