--- a/css/RRCss.css
+++ b/css/RRCss.css
@@ -1,6 +1,6 @@
 
 /* styles -----------------------------------*/
-body,html{ width: 100%; height: 100%;  font-family: sans-serif, 微軟正黑體,Arial; font-size: 18px;line-height: 18px;}
+body,html{ width: 100%; height: 100%;  font-family: Arial, Noto Sans TC, sans-serif; font-size: 18px;line-height: 18px;}
 html{
 	background: url(../images/index_bg-01.svg) no-repeat top 0 left 0 ;
 	background-blend-mode:darken;
@@ -135,20 +135,20 @@ main > section{
 			align-items: center;
 }
 .info .info_name{
-			font-family: Arial regular;
+			font-family: Arial;
 			color: black;
 			font-size: 1.3em;
 			line-height: 1.5em;
 }
 .info p {
-			font-family: Arial regular;
+			
 			color: gray;
 			font-size: 0.9em;
 			line-height: 2em;
 			vertical-align:middle;
 }
 .info p a{
-			font-family: Arial regular;
+			
 			color: blue;
 			font-size: 0.8em;
 			line-height: 2em;
