--- a/css/WorkCss.css
+++ b/css/WorkCss.css
@@ -346,16 +346,13 @@ main > section{
 	justify-content: center;
 	max-width: 1100px;
 	margin: 0 auto;
-	/*grid-auto-rows:auto;*/
-	/*grid-auto-flow: dense;*/
 }
 .container_v img{
 	width: 100%;
 	margin: 0 auto;
 }
 .container_photo { 
-	display: grid; 
-	/*grid-template-columns: repeat(auto-fill, minmax(540px, 1fr));*/
+	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(min-content, 540px));
 	grid-gap: 30px;
 	justify-content: center;
@@ -473,7 +470,7 @@ section.lightblue{
 			background-color: rgba(0,0,0,0.5);
 		}
 		#blur{
-			transition: 1s;
+			transition: 0.5s;
 		}
 		.de-emphasized{
 			filter: blur(3px);
@@ -696,10 +693,21 @@ section.lightblue{
 	background-repeat: no-repeat; 
 	}
 	.modal{
-		padding-top: 20px;
+		padding-top: 10px;
+		padding-bottom: 10px;
 	}
 	.modal-content{
 		width: 90%;
+		padding: 2px;
+	}
+	.one-span {
+	padding-bottom: 6px;
+	}
+	.wide-span{
+	padding-bottom: 6px;
+	}
+	.tall-span{
+	padding-bottom: 6px;
 	}
 	.info{
         display: grid;
@@ -841,10 +849,11 @@ section.lightblue{
 	background-position: left 100px top -10%;
 	}
 	.modal{
-		padding-top: 20px;
+		padding-top: 10px;
 	}
 	.modal-content{
 		width: 80%;
+		padding: 2px;
 	}
 	.info{
         display: grid;
@@ -945,6 +954,35 @@ section.lightblue{
 	.dailyui_title{
 	line-height: 0.5em;
 	padding-bottom: 0.5em;
+	}
+	.modal{
+		padding-top: 20vh;
+	}
+	.modal-content{
+		width: 90%;
+		padding: 2px;
+	}
+	.one-span img{
+	width: 96px;
+	object-fit: cover;
+	height: 75px;
+	}
+	.wide-span img{
+	width: 106px;
+	object-fit: cover;
+	height: 75px;
+	}
+	.tall-span{
+	justify-content: center;
+	}
+	.tall-span img{
+	width: 96px;
+	object-fit: cover;
+	height: 100px;
+	}
+	.info{
+    display: grid;
+    grid-template-columns: 90px auto auto 30%; 
 	}
 }
 @media (min-width:1201px) and (max-width:1800px){
