--- a/css/RRCss.css
+++ b/css/RRCss.css
@@ -89,7 +89,7 @@ main > section{
 			background-color: rgba(0,0,0,0.5);
 		}
 		#blur{
-			transition: 1s;
+			transition: 0.5s;
 		}
 		.de-emphasized{
 			filter: blur(3px);
@@ -167,7 +167,7 @@ main > section{
             display: grid;
             grid-template-columns:1fr 1fr 1fr 1fr 1fr 1fr;
             grid-auto-rows: 120px;
-            grid-gap: 15px;
+            grid-gap: 10px;
         }
 .box {
             border-radius: 10px;
@@ -613,7 +613,8 @@ footer > section{
 		width: 100%;
 	}
 	.modal{
-		padding-top: 20px;
+		padding-top: 10px;
+		padding-bottom: 10px;
 		width: 100vw;	
 	}
 	.modal-content{
@@ -659,7 +660,7 @@ footer > section{
 		grid-template-rows:auto;
 		width: 100%;
         grid-auto-rows: 120px;
-        grid-gap: 15px;    
+        grid-gap: 10px;    
      }
 	.wrapper > .row img{
 		max-height: 80px;
@@ -846,8 +847,7 @@ footer > section{
         display: grid;
         grid-template-columns:1fr 1fr ;
 		grid-template-rows:100px ;
-		width: 100%;
-        
+		width: 100%; 
         grid-gap: 10px;    
      }
 	.wrapper > .row   img{
