--- a/css/WorkCss.css
+++ b/css/WorkCss.css
@@ -689,7 +689,7 @@ section.lightblue{
 	background-image:url(../images/GC/GC_bg.jpg);
 	background-size:cover;
 	background-attachment:fixed;
-	background-position: left -300px top 50px;
+	background-position: center center;
 	background-repeat: no-repeat; 
 	}
 	.modal{
