--- a/css/WorkCss.css
+++ b/css/WorkCss.css
@@ -686,7 +686,7 @@ section.lightblue{
 	.GC_BG{
 	width: 100%;
 	height: 400px;
-	background-image:url(../images/GC/GC_bg.jpg);
+	background-image:url(../images/GC/GC_bg_s.jpg);
 	background-size:cover;
 	background-attachment:fixed;
 	background-position: center center;
