--- a/css/WorkCss.css
+++ b/css/WorkCss.css
@@ -193,6 +193,21 @@ main > section{
 	margin: 0 auto;
 	width: 100%;
 }
+.container_vennDecal { 
+	display: grid; 
+	grid-template-columns: repeat 1fr;
+	grid-column-gap: 25px;
+	grid-row-gap: 20px;
+	justify-content: center;
+	width: 100%;
+	max-width:1110px;
+	margin: 0 auto;
+	padding-bottom: 30px;
+}
+.container_vennDecal > img{
+	margin: 0 auto;
+	width: 100%;
+}
 .container_dailyui { 
 	display: grid; 
 	grid-template-columns: repeat(auto-fill, minmax(min-content, 250px));
