--- a/css/WorkCss.css
+++ b/css/WorkCss.css
@@ -341,18 +341,33 @@ main > section{
 .container_banner img{
 	width: 100%;
 }
-.container_fb { 
-	display: grid; 
-	grid-template-columns: repeat(auto-fill, minmax(min-content, 350px));
-	grid-gap: 20px;
-	justify-content: center;
+.container_fb1 { 
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
 	max-width: 1100px;
-	margin: 0 auto;
-	padding-bottom: 30px;
+	height: 1380px;
+	
+	margin: 0 auto;		
+	margin-top: -10px;
 }
-.container_fb img{
-	width: 100%;
-	margin: 0 auto;
+.container_fb1 img{
+	width: 350px;
+	margin: 10px;
+}
+.container_fb2 { 
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	max-width: 1100px;
+	height: 1830px;
+	
+	margin: 0 auto;		
+	margin-top: -10px;
+}
+.container_fb2 img{
+	width: 350px;
+	margin: 10px;
 }
 .container_v { 
 	display: grid; 
@@ -1127,6 +1142,34 @@ section.lightblue{
 	margin: 0 auto;
 	justify-content: center;
 	}
+	.container_fb1 { 
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	max-width: 90%;
+	height: auto;
+	margin: 0 auto;		
+	margin-top: -10px;
+	}
+	.container_fb1 img{
+	width: 100%;
+	margin: auto;
+	margin-bottom: 10px;
+	}
+	.container_fb2 { 
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	max-width: 90%;
+	height: auto;
+	margin: 0 auto;		
+	margin-top: -10px;
+	}
+	.container_fb2 img{
+	width: 100%;
+	margin: auto;
+	margin-bottom: 10px;
+	}
 	.container_UI { 
 	display: grid; 
 	grid-template-columns: 1fr;
@@ -1284,6 +1327,36 @@ section.lightblue{
 	max-width: 90%;
 	margin: 0 auto;
 	}
+	.container_fb1 { 
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	max-width: 90%;
+	height: auto;
+	align-items: center;
+	margin: 0 auto;		
+	margin-top: -10px;
+	}
+	.container_fb1 img{
+	width: 100%;
+	margin: auto;
+	margin-bottom: 10px;
+	}
+	.container_fb2 { 
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	max-width: 100%;
+	height: auto;
+	padding: 10px;
+	margin: 0 auto;		
+	margin-top: -10px;
+	}
+	.container_fb2 img{
+	width: 100%;
+	margin: auto;
+	margin-bottom: 10px;
+	}
 	.container_UI { 
 	display: grid; 
 	grid-template-columns: 1fr;
@@ -1430,6 +1503,36 @@ section.lightblue{
 	.container_pack { 
 	max-width:1110px;
 	margin: 0 auto;
+	}
+	.container_fb1 { 
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	max-width: 760px;
+	height:2080px;
+	margin: 0 auto;		
+	margin-top: -10px;
+	align-content: center;
+	}
+	.container_fb1 img{
+	width: 350px;
+	margin: 0 auto;
+	padding: 10px;	
+	}
+	.container_fb2 { 
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	max-width: 100%;
+	height: 2800px;
+	margin: 0 auto;		
+	margin-top: -10px;
+	align-content: center;
+	}
+	.container_fb2 img{
+	width: 350px;
+	margin: 0 auto;
+	padding: 10px;	
 	}
 	.colorstudy1{
 		display: grid;
