--- a/css/WorkCss.css
+++ b/css/WorkCss.css
@@ -1652,6 +1652,24 @@ section.lightblue{
 		width: 90%;
 		padding: 2px;
 	}
+	.one-span img{
+	width: 90%;
+	object-fit: cover;
+	height: 75px;
+	}
+	.wide-span img{
+	width: 100px;
+	object-fit: cover;
+	height: 75px;
+	}
+	.tall-span{
+	justify-content: center;
+	}
+	.tall-span img{
+	width: 90%;
+	object-fit: cover;
+	height: 90px;
+	}
 }
 @media (min-width:1801px) and (max-width:2560px){
 	.container_gra { 
