--- a/css/RRCss.css
+++ b/css/RRCss.css
@@ -576,6 +576,7 @@ main > section{
 			filter: blur(3px);
 		}
 		.modal-content{
+			
 			background-color: white;
 			margin: auto;
 			padding: 10px;
@@ -702,6 +703,49 @@ main > section{
 	border-width:thick;
 	transition: 0.5s;
 }
+
+/* bt6 -----------------------------------*/
+.b6{
+	position:relative;
+	left:210px;
+	margin-bottom: 50px;
+}
+.b6 > img{
+	transform: translateY(10px);
+	transition: 0.5s;
+	max-width: 450px;
+}
+.project-info6{
+	position:absolute;
+    top:0px;
+    left:20px;
+    transform: translateY(10px);
+	transition: 0.5s;
+    opacity: 0;
+	color: white;
+	z-index: 100;
+}
+.b6:hover .project-info6{
+	transform: translateY(0px);
+	-webkit-transform: translateY(0px);
+	transition: 0.5s;
+	opacity: 1;
+}
+.b6:hover > img{
+	transform: translateY(0px);
+	-webkit-transform: translateY(0px);
+	transition: 0.5s;
+	filter: drop-shadow(1px 1px 5px rgba(0, 0, 0, 0.5))  brightness(.5);
+}
+.project-info6 > h1{
+	font-family: Arial Black;
+	font-size: 2em;
+}
+.project-info6 > p{
+	font-family: Arial;
+	font-size: 1em;		
+}
+
 
 /* bt1 -----------------------------------*/
 .b1{
@@ -1033,6 +1077,16 @@ footer > section{
 	.b5 p{
 		top: 10%;
 	}
+	.b6 {
+		top: 0;
+		left: 0;
+		width:100%;
+	}
+	.b6 > img {
+		max-width: 100%;	
+		margin: 0 auto;
+		transform: translateY(0px);
+	}
 	.project-info1 {
 		left:0;
 		opacity: 1;
@@ -1088,6 +1142,20 @@ footer > section{
 	.project-info4 > p{
 		font-size: 0.9em;
 		line-height: 0em;
+	}
+	.project-info6 {
+		left:0;
+		opacity: 1;
+		color: rgb(70,70,70,1);
+		margin-top:  -70px;
+		line-height: 0;
+	}
+	.project-info6 > h1{
+		font-size: 1.5em;
+	}
+	.project-info6 > p{
+		font-size: 0.9em;
+		line-height: 1em;
 	}
 	.col div{
 		max-width: 550px;
@@ -1223,6 +1291,16 @@ footer > section{
 		width:100%;
 		top: -100px;
 		left: 0;
+	}
+	.b6 {
+		top: 0;
+		left: 0;
+		width:100%;
+	}
+	.b6 > img {
+		max-width: 100%;	
+		margin: 0 auto;
+		transform: translateY(0px);
 	}
 	.project-info1 {
 		left:0;
@@ -1432,6 +1510,15 @@ footer > section{
 		font-size: 0.8em;
 		line-height: 1.2em;
 	}
+	.b6 {
+		position:relative;
+		width: 45%;
+	}
+	.b6 > img {
+		transform: translateY(0px);
+		max-width:100%;
+		margin: 0 auto;
+	}
 	.project-info1 {
 		left:0;
 		opacity: 1;
@@ -1490,6 +1577,20 @@ footer > section{
 	.project-info4 > p{
 		font-size: 0.9em;
 		padding: -20px;
+	}
+	.project-info6 {
+		left:0;
+		opacity: 1;
+		color: rgb(70,70,70,1);
+		margin-top:  -80px;
+		line-height: 0.5em;
+	}
+	.project-info6 > h1{
+		font-size: 1.6em;
+	}
+	.project-info6 > p{
+		font-size: 0.9em;
+		line-height: 1em;
 	}
 	.modal{
 		padding-top: 100px;
@@ -1648,6 +1749,16 @@ footer > section{
 		top: 0;
 		font-size: 0.8em;
 	}
+	.b6 {
+		position:relative;
+		width: 45%;
+		margin-bottom: -100px;
+	}
+	.b6 > img {
+		transform: translateY(0px);
+		max-width:100%;
+		margin: 0 auto;
+	}
 	.project-info1 {
 		left:0;
 		opacity: 1;
@@ -1706,6 +1817,20 @@ footer > section{
 	.project-info4 > p{
 		font-size: 0.9em;
 		padding: -20px;
+	}
+	.project-info6 {
+		left:0;
+		opacity: 1;
+		color: rgb(70,70,70,1);
+		margin-top:  -80px;
+		line-height: 0.5em;
+	}
+	.project-info6 > h1{
+		font-size: 1.6em;
+	}
+	.project-info6 > p{
+		font-size: 0.9em;
+		line-height: 1em;
 	}
 	.modal{
 		padding-top: 100px;
