--- a/css/RRCss.css
+++ b/css/RRCss.css
@@ -704,10 +704,53 @@ main > section{
 	transition: 0.5s;
 }
 
+/* bt7 -----------------------------------*/
+.b7{
+	position:relative;
+	left:200px;
+	margin-bottom: 50px;
+}
+.b7 > img{
+	transform: translateY(10px);
+	transition: 0.5s;
+	max-width: 450px;
+}
+.project-info7{
+	position:absolute;
+    top:0px;
+    left:20px;
+    transform: translateY(10px);
+	transition: 0.5s;
+    opacity: 0;
+	color: white;
+	z-index: 100;
+}
+.b7:hover .project-info7{
+	transform: translateY(0px);
+	-webkit-transform: translateY(0px);
+	transition: 0.5s;
+	opacity: 1;
+}
+.b7:hover > img{
+	transform: translateY(0px);
+	-webkit-transform: translateY(0px);
+	transition: 0.5s;
+	filter: drop-shadow(1px 1px 5px rgba(0, 0, 0, 0.5))  brightness(.5);
+}
+.project-info7 > h1{
+	font-family: Arial Black;
+	font-size: 2em;
+}
+.project-info7 > p{
+	font-family: Arial;
+	font-size: 1em;		
+}
+
+
 /* bt6 -----------------------------------*/
 .b6{
 	position:relative;
-	left:210px;
+	left:400px;
 	margin-bottom: 50px;
 }
 .b6 > img{
@@ -1087,6 +1130,16 @@ footer > section{
 		margin: 0 auto;
 		transform: translateY(0px);
 	}
+	.b7 {
+		top: 0;
+		left: 0;
+		width:100%;
+	}
+	.b7 > img {
+		max-width: 100%;	
+		margin: 0 auto;
+		transform: translateY(0px);
+	}
 	.project-info1 {
 		left:0;
 		opacity: 1;
@@ -1154,6 +1207,20 @@ footer > section{
 		font-size: 1.5em;
 	}
 	.project-info6 > p{
+		font-size: 0.9em;
+		line-height: 1em;
+	}
+	.project-info7 {
+		left:0;
+		opacity: 1;
+		color: rgb(70,70,70,1);
+		margin-top:  -70px;
+		line-height: 0;
+	}
+	.project-info7 > h1{
+		font-size: 1.5em;
+	}
+	.project-info7 > p{
 		font-size: 0.9em;
 		line-height: 1em;
 	}
@@ -1298,6 +1365,16 @@ footer > section{
 		width:100%;
 	}
 	.b6 > img {
+		max-width: 100%;	
+		margin: 0 auto;
+		transform: translateY(0px);
+	}
+	.b7 {
+		top: 0;
+		left: 0;
+		width:100%;
+	}
+	.b7 > img {
 		max-width: 100%;	
 		margin: 0 auto;
 		transform: translateY(0px);
@@ -1519,6 +1596,15 @@ footer > section{
 		max-width:100%;
 		margin: 0 auto;
 	}
+	.b7 {
+		position:relative;
+		width: 45%;
+	}
+	.b7 > img {
+		transform: translateY(0px);
+		max-width:100%;
+		margin: 0 auto;
+	}
 	.project-info1 {
 		left:0;
 		opacity: 1;
@@ -1589,6 +1675,20 @@ footer > section{
 		font-size: 1.6em;
 	}
 	.project-info6 > p{
+		font-size: 0.9em;
+		line-height: 1em;
+	}
+	.project-info7 {
+		left:0;
+		opacity: 1;
+		color: rgb(70,70,70,1);
+		margin-top:  -80px;
+		line-height: 0.5em;
+	}
+	.project-info7 > h1{
+		font-size: 1.6em;
+	}
+	.project-info7 > p{
 		font-size: 0.9em;
 		line-height: 1em;
 	}
@@ -1759,6 +1859,16 @@ footer > section{
 		max-width:100%;
 		margin: 0 auto;
 	}
+	.b7 {
+		position:relative;
+		width: 45%;
+		margin-bottom: -100px;
+	}
+	.b7 > img {
+		transform: translateY(0px);
+		max-width:100%;
+		margin: 0 auto;
+	}
 	.project-info1 {
 		left:0;
 		opacity: 1;
@@ -1829,6 +1939,20 @@ footer > section{
 		font-size: 1.6em;
 	}
 	.project-info6 > p{
+		font-size: 0.9em;
+		line-height: 1em;
+	}
+	.project-info7 {
+		left:0;
+		opacity: 1;
+		color: rgb(70,70,70,1);
+		margin-top:  -80px;
+		line-height: 0.5em;
+	}
+	.project-info7 > h1{
+		font-size: 1.6em;
+	}
+	.project-info7 > p{
 		font-size: 0.9em;
 		line-height: 1em;
 	}
