--- a/css/WorkCss.css
+++ b/css/WorkCss.css
@@ -1307,13 +1307,16 @@ section.lightblue{
 		display: grid;
 	}
 	.GC_BG{
-	width: 100%;
-	height: 400px;
-	background-image:url(../images/GC/GC_bg_s.jpg);
-	background-size:cover;
-	background-attachment:fixed;
-	background-position: center center;
-	background-repeat: no-repeat; 
+		background-image:url(../images/GC/GC_bg_s.jpg);
+		background-size: cover;
+		background-position: center top -50%;
+		background-repeat: no-repeat;
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height:  100%;
+		z-index: -1;
 	}
 	.modal{
 		padding-top: 10px;
