--- a/css/WorkCss.css
+++ b/css/WorkCss.css
@@ -4,7 +4,7 @@
 
 body,html{ width: 100%; height: 100%;  font-family: Arial, "Noto Sans TC", sans-serif; font-size: 18px; font-weight: 300;}
 *{ box-sizing: border-box; margin: 0; border: 0; padding: 0; }
-body{background-color: white;}
+body{background-color: white !important;}
 nav{
 	position: fixed;
 	width: 100%;
