--- a/css/WorkCss.css
+++ b/css/WorkCss.css
@@ -1394,6 +1394,7 @@ section.lightblue{
 	header{
 		padding-left: 10%;
 	}
+	body{background-color: white !important;}
 }
 
 @media (min-width:601px) and (max-width:767px){
