--- a/css/WorkCss.css
+++ b/css/WorkCss.css
@@ -1067,7 +1067,7 @@ section.lightblue{
 			font-weight: bold;
 			z-index: 100;
 			background-color: white;
-			padding: 10px;
+			margin: 10px;
 		}
 		.close:hover,
 		.close:focus{
