--- a/css/RRCss.css
+++ b/css/RRCss.css
@@ -599,7 +599,7 @@ main > section{
 			font-weight: bold;
 			z-index: 100;
 			background-color: white;
-			padding: 5px;
+			margin: 10px;
 		}
 		.close:hover,
 		.close:focus{
