--- a/css/RRCss.css
+++ b/css/RRCss.css
@@ -600,6 +600,7 @@ main > section{
 			z-index: 100;
 			background-color: white;
 			margin: 10px;
+			padding: 10px;
 		}
 		.close:hover,
 		.close:focus{
