--- a/css/WorkCss.css
+++ b/css/WorkCss.css
@@ -1068,6 +1068,7 @@ section.lightblue{
 			z-index: 100;
 			background-color: white;
 			margin: 10px;
+			padding: 10px;
 		}
 		.close:hover,
 		.close:focus{
